- removing task list ui swing