@@ -36,6 +36,9 @@
                             <executable>java</executable>
                             <arguments>
                                 <!-- mac osx for infinispan -->
+                                <argument>-Xmx2048m</argument>
+                                <argument>-Xms1024m</argument>
+                                <argument>-XX:MaxPermSize=1024M</argument>
                                 <argument>-Djgroups.bind_addr=127.0.0.1</argument>
                                 <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-classpath</argument>
@@ -169,36 +172,6 @@
             </repositories>
         </profile>
 
-        <!--tasklists-ui -->
-        <profile>
-            <id>tasklists-ui</id>
-            <build>
-                <defaultGoal>exec:exec</defaultGoal>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <!-- mac osx for infinispan -->
-                                <argument>-Djgroups.bind_addr=127.0.0.1</argument>
-                                <argument>-Djava.net.preferIPv4Stack=true</argument>
-                                <argument>-classpath</argument>
-                                <classpath />
-                                <argument>com.wordpress.salaboy.emergencyservice.main.UserTaskListUI</argument>
-                            </arguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-            <dependencies>
-                <dependency>
-                    <groupId>${project.groupId}</groupId>
-                    <artifactId>emergency-service-taskslists-ui-swing</artifactId>
-                </dependency>
-            </dependencies>
-        </profile>
         
         
         <!--dashboard-ui -->
@@ -244,6 +217,9 @@
                         <configuration>
                             <executable>java</executable>
                             <arguments>
+				 <!-- mac osx for infinispan -->
+                                <argument>-Djgroups.bind_addr=127.0.0.1</argument>
+                                <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-d32</argument>
                                 <argument>-classpath</argument>
                                 <classpath />
